--- a/assets/projeto2.css
+++ b/assets/projeto2.css
@@ -1,5 +1,6 @@
 body {
-  background-color: #272727;
+  background-color: rgb(39, 39, 39);
+  overflow-x: hidden;
 }
 
 .sectionForm {
@@ -7,15 +8,11 @@ body {
 }
 
 .formDinamica {
-  border: 1px solid #00fff2;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 6px 10px -5px #00fff2;
-          box-shadow: 0px 6px 10px -5px #00fff2;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  background-color: #00fff247;
+  border: 1px solid rgb(0, 255, 242);
+  border-radius: 5px;
+  box-shadow: 0px 6px 10px -5px rgb(0, 255, 242);
+  flex-direction: column;
+  background-color: rgba(0, 255, 242, 0.2784313725);
   margin-left: 35px;
   padding: 20px;
   width: 650px;
@@ -24,26 +21,25 @@ body {
 .formDinamica input {
   margin: 10px;
   height: 30px;
+  border-radius: 5px;
 }
 
 .listOfTask span {
-  color: #2dc5f3;
+  color: rgb(45, 197, 243);
 }
 
 .listOfTask {
   height: 100px;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  justify-content: flex-start;
   margin-top: 9px;
   list-style: none;
   overflow-y: auto;
   border: 1px solid #00fffd;
+  background-color: #004343;
   padding: 9px;
   color: #00e2ff;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 4px 1px #000;
-          box-shadow: 0px 0px 4px 1px #000;
+  box-shadow: 0px 0px 4px 1px #000;
 }
 
 .listOfTask p {
@@ -56,22 +52,16 @@ body {
 
 #lista {
   list-style: none;
-  border: 1px solid #00fff2;
+  border: 1px solid rgb(0, 255, 242);
   width: 650px;
-  height: auto;
   margin: 20px auto 0 35px;
-  background-color: #00fff247;
-  border-radius: 20px;
-  height: 350px;
+  background-color: rgba(0, 255, 242, 0.2784313725);
+  border-radius: 5px;
+  height: 300px;
+  max-height: 300px;
   padding: 20px;
   overflow-x: auto;
   position: relative;
-}
-
-#count {
-  position: absolute;
-  bottom: 210px;
-  left: 45px;
 }
 
 .formDinamica label {
@@ -83,75 +73,55 @@ body {
 .formDinamica button {
   width: 150px;
   height: 30px;
-  margin-top: 30px;
+  margin-top: 15px;
   font-weight: bold;
   border-radius: 5px;
   letter-spacing: 2px;
   position: relative;
   color: black;
-  background-color: #1aca31;
+  background-color: rgb(26, 202, 49);
 }
 
 .formDinamica button::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 0;
   left: 0;
   top: 0;
   height: 100%;
-  -webkit-transition: all 1s;
-  transition: all 1s;
+  transition: all 0 0.5s;
   color: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .formDinamica button:hover:after {
-  content: 'Enviar';
+  content: "Enviar";
   color: black;
   width: 100%;
-  background-color: #0e8f1f;
-  -webkit-transition: all 1s;
+  background-color: rgb(14, 143, 31);
   transition: all 1s;
 }
 
 #listaInterna {
   overflow-x: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: column;
+  flex-wrap: wrap;
   height: auto;
 }
 
 .card {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
   width: 47%;
   height: 150px;
-  border: 2px solid #00fff2;
+  border: 2px solid rgb(0, 255, 242);
   background-color: rgba(0, 0, 0, 0.568);
   color: white;
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   text-align: center;
   margin: 10px;
 }
@@ -189,16 +159,16 @@ body {
 
 #description {
   width: 81%;
-  height: 100px;
+  height: 60px;
+  border-radius: 5px;
 }
 
 .alert {
   display: block;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 5px 2px #1b1b1b;
-          box-shadow: 0px 0px 5px 2px #1b1b1b;
+  box-shadow: 0px 0px 5px 2px rgb(27, 27, 27);
   color: #fff;
-  background-color: #074f61;
+  background-color: rgb(7, 79, 97);
   position: absolute;
   right: 0;
   padding: 50px;
@@ -241,5 +211,4 @@ body {
   100% {
     right: -500px;
   }
-}
-/*# sourceMappingURL=projeto2.css.map */
+}/*# sourceMappingURL=projeto2.css.map */
