--- a/assets/products.css
+++ b/assets/products.css
@@ -38,7 +38,7 @@
   height: auto;
   display: flex;
   flex-direction: start;
-  justify-content: center;
+  justify-content: flex-start;
   margin: 0 auto;
   gap: 30px;
   margin-bottom: 100px;
@@ -46,17 +46,38 @@
 }
 
 .card {
-  width: 280px;
+  width: 22.5%;
   height: 350px;
   border: 1px solid rgb(186, 186, 186);
   border-radius: 10px;
   box-shadow: 0px 0px 8px 0px #acacac;
   position: relative;
 }
+@media (max-width: 1060px) {
+  .card {
+    width: 30%;
+  }
+}
+@media (max-width: 705px) {
+  .card {
+    width: 46%;
+  }
+}
+@media (max-width: 440px) {
+  .card {
+    width: 96%;
+  }
+}
+@media (min-width: 1750px) {
+  .card {
+    width: 18%;
+  }
+}
 .card .imgProduct {
   width: 100%;
   height: 200px;
-  border-radius: 10px;
+  padding: 10px;
+  border-radius: 20px;
   -o-object-fit: cover;
      object-fit: cover;
 }
