--- a/loja/products/products.scss
+++ b/loja/products/products.scss
@@ -32,7 +32,7 @@
     height: auto;
     display: flex;
     flex-direction: start;
-    justify-content: center;
+    justify-content: flex-start;
     margin: 0 auto;
     gap: 30px;
     margin-bottom: 100px;
@@ -41,16 +41,31 @@
 }
 
 .card {
-    width: 280px;
+    width: calc(90% / 4);
+    // width: 280px;
     height: 350px;
     border: 1px solid rgb(186, 186, 186);
     border-radius: 10px;
     box-shadow: 0px 0px 8px 0px #acacac;
     position: relative;
+
+    @media(max-width:1060px ) {
+            width: calc(90% / 3);
+    }
+    @media(max-width:705px ) {
+        width: 46%;
+    }
+    @media(max-width:440px ) {
+        width: 96%;
+    }
+    @media(min-width:1750px ) {
+        width: calc(90% / 5)
+    }
     .imgProduct {
         width: 100%;
         height: 200px;
-        border-radius: 10px;
+        padding: 10px;
+        border-radius: 20px;
         object-fit: cover;
     }
     .title {
