--- a/loja/footerLojinha.scss
+++ b/loja/footerLojinha.scss
@@ -4,7 +4,7 @@
     display: flex;
     // justify-content: space-between;
     flex-wrap: wrap;
-    font-size: 12px;
+    font-size: 1em;
     background-color: #0d5962;
     color: #fff;
     .centerFooter {
