--- a/loja/products/products.scss
+++ b/loja/products/products.scss
@@ -40,10 +40,16 @@
 
 }
 
+#carrinho {
+    position: fixed;
+    right: 70px;
+    margin-top: 5px;
+}
+
 .card {
     width: calc(90% / 4);
     // width: 280px;
-    height: 350px;
+    height: 360px;
     border: 1px solid rgb(186, 186, 186);
     border-radius: 10px;
     box-shadow: 0px 0px 8px 0px #acacac;
@@ -75,7 +81,7 @@
     .description {
         padding: 0 10px;
         font-size: 13px;
-
+        line-height: 1.35;
         overflow: hidden; // Removendo barra de rolagem
         text-overflow: ellipsis; // Adicionando "..." ao final
         display: -webkit-box;
@@ -106,4 +112,29 @@
 #count {
     width: 85vw;
     margin: 0px auto 17px auto;
+}
+
+.checkout {
+    position: fixed;
+    right: 0;
+    top: 150px;
+    box-shadow: -3px 0px 5px 2px #e0e0e0;
+    width: 500px;
+    height: 80vh;
+    z-index:9999;
+    background-color:#fff;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    display: none;
+    .closeCheckout {
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        text-align: center;
+        border: 1px solid;
+        padding: 10px 0;
+        background-color: #025d54;
+        color: #fff;
+        border-bottom-left-radius: 10px;
+    }
 }
