--- a/kanban-testes/login.css
+++ b/kanban-testes/login.css
@@ -2,22 +2,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('../imagens/bg.jpg');
     font-family: 'Times New Roman', Times, serif;
     height: 100vh;
-    overflow-y: hidden;
 }
 
 .form-login {
-    border:1px solid rgb(255, 255, 255);
-    border-radius: 5px;
-    color:#fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 30px 20px;
     font-size: 20px;
-    background-color: #3b4245b8;
     width: calc(100% / 4);
     height: auto;
     max-width: 400px;
@@ -34,7 +28,6 @@ body {
     width: 100%;
     padding: 1em;
     font-size: 1em;
-    background-color: #156e6b;
-    color: #fff;
     margin-top: 50px;
+    cursor: pointer;
 }
