--- a/loja/products/products.scss
+++ b/loja/products/products.scss
@@ -243,3 +243,11 @@
         font-size: 0.8em;
     }
 }
+
+.vazioCarrinho {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3em;
+    color: #c9c9c9;
+}
