--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,9 @@
 .bg-n1{
-    // background-image: url('./imagens/tijolos.jpg');
     background-repeat: no-repeat;
     background-size: cover;  
 }
 body {
-    background-image: url('../imagens/c.jpg');
+    background-image: url('/imagens/fundo/fundo12.jpg');
 }
 
 .dropdown{
