--- a/style.scss
+++ b/style.scss
@@ -76,8 +76,8 @@ body {
     flex-direction: column;
     align-items: left;
     padding:30px;
-    color: #fff;
-    background-color: #0505054f;
+    // color: #fff;
+    // background-color: #0505054f;
     position: relative;
     width: 50%;
 }
@@ -94,16 +94,13 @@ body {
 
 
  /* NIVEL 2 */
- .title-n2{
-    background-color:#131313b7;
-  
- }
+
  .scroll-n2{
     width: 90vw;
     height: auto;
     margin:0 0 30px 0;
     border:1px solidrgb(124, 124, 124);
-    background-color:rgba(31, 31, 31, 0.492);   
+    // background-color:rgba(31, 31, 31, 0.492);   
 }
 .scroll-n2 h1{
     width: 100%;
@@ -111,7 +108,6 @@ body {
     text-align: center;
 }
 .skill-bar {
-    border-radius:50px;
     width: 300px;
     color:#FFFFFF;
     font-style: italic;
@@ -127,18 +123,7 @@ body {
     padding: 20px;
 }
 
-#html{background: -webkit-linear-gradient(left, #057282  90.20%, #000 13.20%);}
-#css{background: -webkit-linear-gradient(left, #057282  80.20%, #000 13.20%);}
-#js{background: -webkit-linear-gradient(left, #057282  78.20%, #000 13.20%);}
-#boots{background: -webkit-linear-gradient(left, #057282  75.20%, #000 13.20%);}
-#react{background: -webkit-linear-gradient(left, #057282  25.20%, #000 13.20%);}
-#angular{background: -webkit-linear-gradient(left, #057282  15.20%, #000 13.20%);}
-#git{background: -webkit-linear-gradient(left, #057282  75.20%, #000 13.20%);}
-#eng{background: -webkit-linear-gradient(left, #057282  65.20%, #000 13.20%);}
-#jquery{background: -webkit-linear-gradient(left, #057282  25.20%, #000 13.20%);}
-#flex{background: -webkit-linear-gradient(left, #057282  75.20%, #000 13.20%);}
-#sql{background: -webkit-linear-gradient(left, #057282  70.20%, #000 13.20%);}
-#node{background: -webkit-linear-gradient(left, #057282  60.20%, #000 13.20%);}
+
 
 /* SCROLL 3 */
 
@@ -337,8 +322,6 @@ body {
   }
 
 .btn-projects {
-  background-color: #057282;
-  border: 1px solid #2fe3ff;
   border-radius: 5px;
   padding: 30px;
   width: calc(100% / 5);
@@ -360,8 +343,6 @@ body {
         position: absolute;
         top: 0;
         text-decoration: none;
-        color: #fff4f4;
-        background-color: #00000047;
         width: 100%;
         text-align: center;
         padding: 10px 0;
