--- a/assets/jogoDaVelha.css
+++ b/assets/jogoDaVelha.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #83ab76;
+  background-color: #000000;
 }
 
 .caixa-principal {
@@ -11,7 +11,7 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  border: 10px solid rgb(133, 65, 10);
+  border: 10px solid rgb(29, 167, 215);
 }
 
 .sub-caixa {
@@ -22,6 +22,7 @@ body {
   display: flex;
   justify-content: center;
   font-size: 120px;
+  color: #fff;
 }
 
 .sucess {
@@ -35,18 +36,45 @@ body {
 
 .modalJogadorCampeao {
   position: absolute;
-  border: 1px solid white;
+  border: 4px solid black;
   box-shadow: 0px 0px 4px 1px black;
   text-align: center;
   width: 400px;
+  color: #fff;
   height: 200px;
   top: 40%;
   left: 50%;
-  background-color: #fff;
+  background-color: #00afd1;
   transform: translate(-50%);
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .informacoes {
   text-align: center;
+  width: 47vw;
+  margin: 0 auto;
+  padding: 20px;
+  color: #fff;
+}
+
+.points {
+  border: 5px solid rgb(29, 167, 215);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.playerPoints {
+  font-size: 20px;
+  width: 50%;
+}
+
+@media (max-width: 649px) {
+  .points {
+    flex-direction: column;
+    align-items: center;
+  }
 }/*# sourceMappingURL=jogoDaVelha.css.map */
